force-app/main/default/objects/Formulario_de_Calidad__c/Formulario_de_Calidad__c.object-meta.xml
<CustomObject>
    <label>Formulario de Calidad</label>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Numero de Formulario de calidad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formularios de Calidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>