force-app/main/default/objects/Formulario_de_Calidad__c/fields/C_mo_utiliza_prepara_el_producto__c.field-meta.xml
<CustomField>
    <fullName>C_mo_utiliza_prepara_el_producto__c</fullName>
    <label>¿Cómo utiliza/prepara el producto?</label>
    <type>TextArea</type>
</CustomField>