force-app/main/default/objects/Formulario_de_Calidad__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) AND (3 OR 4 OR 5)</booleanFilter>
        <errorMessage>Los formularios de calidad solo están disponibles para casos de tipo &quot;Reclamo&quot; y Subtipo &quot;Calidad&quot;, y de tipo de registro Paciente Best care, Regular o Consumidor Baby.</errorMessage>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Reclamo</value>
        </filterItems>
        <filterItems>
            <field>Case.Subtipo__c</field>
            <operation>equals</operation>
            <value>Calidad</value>
        </filterItems>
        <filterItems>
            <field>Case.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care</value>
        </filterItems>
        <filterItems>
            <field>Case.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Regular</value>
        </filterItems>
        <filterItems>
            <field>Case.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consumidor Baby</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Formulario de calidad</relationshipLabel>
    <relationshipName>Formulario_de_calidad</relationshipName>
    <type>Lookup</type>
</CustomField>