force-app/main/default/objects/Formulario_de_Calidad__c/fields/Cuales__c.field-meta.xml
<CustomField>
    <fullName>Cuales__c</fullName>
    <defaultValue>&quot;--Ninguno--&quot;</defaultValue>
    <label>¿Cuales?</label>
    <type>TextArea</type>
</CustomField>