force-app/main/default/objects/Formulario_de_Calidad__c/fields/El_beb_presenta_alg_n_s_ntoma__c.field-meta.xml
<CustomField>
    <fullName>El_beb_presenta_alg_n_s_ntoma__c</fullName>
    <label>¿El bebé presenta algún síntoma?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>