force-app/main/default/objects/Formulario_de_Calidad__c/fields/Formula_Medic_Existe_diagn_stico_m_dico__c.field-meta.xml
<CustomField>
    <fullName>Formula_Medic_Existe_diagn_stico_m_dico__c</fullName>
    <inlineHelpText>Formula Medicamentosa</inlineHelpText>
    <label>¿Existe diagnóstico médico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>