force-app/main/default/objects/Formulario_de_Calidad__c/fields/Hace_cu_nto_abri_el_producto__c.field-meta.xml
<CustomField>
    <fullName>Hace_cu_nto_abri_el_producto__c</fullName>
    <label>¿Hace cuánto abrió el producto?</label>
    <type>TextArea</type>
</CustomField>