force-app/main/default/objects/Formulario_de_Calidad__c/fields/Hace_cu_nto_tiempo__c.field-meta.xml
<CustomField>
    <fullName>Hace_cu_nto_tiempo__c</fullName>
    <label>¿Hace cuánto tiempo?</label>
    <type>TextArea</type>
</CustomField>