force-app/main/default/objects/Formulario_de_Calidad__c/fields/Modifico_su_alimentacion__c.field-meta.xml
<CustomField>
    <fullName>Modifico_su_alimentacion__c</fullName>
    <inlineHelpText>¿Realizó algún cambio en su alimentación en los últimos días?</inlineHelpText>
    <label>¿Modifico su alimentacion?</label>
    <type>TextArea</type>
</CustomField>