force-app/main/default/objects/Formulario_de_Calidad__c/fields/Nombre_del_paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_paciente__c</fullName>
    <formula>Caso__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del paciente</label>
    <type>Text</type>
</CustomField>