force-app/main/default/objects/Formulario_de_Calidad__c/fields/Qu_diagnostico_le_brind__c.field-meta.xml
<CustomField>
    <fullName>Qu_diagnostico_le_brind__c</fullName>
    <defaultValue>&quot;--Ninguno--&quot;</defaultValue>
    <label>¿Qué diagnostico le brindó?</label>
    <type>TextArea</type>
</CustomField>