force-app/main/default/objects/Formulario_de_Calidad__c/fields/Realiz_alg_n_cambio_en_su_alimentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Realiz_alg_n_cambio_en_su_alimentaci_n__c</fullName>
    <inlineHelpText>¿Realizó algún cambio en su alimentación en los últimos días?</inlineHelpText>
    <label>Realizó algún cambio en su alimentación?</label>
    <type>TextArea</type>
</CustomField>