force-app/main/default/objects/Formulario_de_Calidad__c/fields/Realiz_la_consulta_con_el_Pediatra__c.field-meta.xml
<CustomField>
    <fullName>Realiz_la_consulta_con_el_Pediatra__c</fullName>
    <defaultValue>&apos;--Ninguno--&apos;</defaultValue>
    <label>¿Realizó la consulta con el Pediatra?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>