force-app/main/default/objects/Formulario_de_Calidad__c/fields/Tuvo_que_ser_ingresado_en_Guardia_o_int__c.field-meta.xml
<CustomField>
    <fullName>Tuvo_que_ser_ingresado_en_Guardia_o_int__c</fullName>
    <defaultValue>&apos;--Ninguno--&apos;</defaultValue>
    <label>¿Ingreso en guardia o quedo internado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>